tests/lexer/invalid/test_invalid_char.src
int main() {
    int a = 42;
    $invalid_var = 10;
    @another = a + 5;
    return a;
}
